# llm-with-langchain

./: pyproject.toml
icebreaker/: app.py  icebreaker.py  output_parsers.py
icebreaker/agents/: _linkedin_lookup_agent.py  linkedin_lookup_agent.py
icebreaker/thidparties/: linkedin.py  twitter.py
icebreaker/tools/: _tools.py  tools.py
