[tool.poetry]
name = "icebreaker"
version = "0.1.0"
description = ""
authors = ["Yoel Monzón <yoelfme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
black = "^23.12.1"
langchainhub = "^0.1.14"
google-search-results = "^2.4.2"
tweepy = "^4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
